k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: etelios
  labels:
    name: etelios
    environment: production
